<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    tools:context=".HealthFeature">

    <LinearLayout
        android:id="@+id/exerciseList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/exercise_list_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/sportsIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/icon"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/sportsText"
            android:fontFamily="@font/mregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/card_exercise_name"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sportsTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/mmedium"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="end"
            android:text="@string/card_exercise_times"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>